# conductor

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  configuration.md  getting-started.md  mcp-integration.md  microvm.md
examples/: manifest.json
migrations/: 20250101000000_init.sql  20250102000000_auth_queue_quotas.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/bridge/: manifest.rs  mod.rs  opencode.rs  opencode_client.rs  sanitize.rs
src/checkout/: credentials.rs  mod.rs  skills.rs  target.rs
src/mcp/: codebase_memory.rs  mod.rs  preindex.rs
src/models/: mod.rs  session.rs  tenant.rs
src/orchestrator/: mod.rs
src/runtime/: firecracker.rs  local.rs  microvm.rs  mod.rs
src/server/: auth.rs  events.rs  metrics_recorder.rs  mod.rs  routes.rs  ws.rs
src/state/: db.rs  locks.rs  mod.rs  queue.rs  quotas.rs
src/teardown/: compact.rs  mod.rs  persist.rs
src/worker/: mod.rs
