[package]
name = "conductor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust orchestration control plane for remote AI agents"
license = "MIT"
repository = "https://github.com/2mes4/conductor"
homepage = "https://github.com/2mes4/conductor"
documentation = "https://github.com/2mes4/conductor/blob/main/docs/getting-started.md"
readme = "README.md"
keywords = ["ai", "orchestration", "agents", "opencode", "control-plane"]
categories = ["command-line-utilities", "asynchronous", "api-bindings"]

[lib]
name = "conductor"
path = "src/lib.rs"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
hyper = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Git operations (native, never shell out)
git2 = "0.19"

# Token counting for context compaction
tiktoken-rs = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
once_cell = "1"

# Phase 1: HTTP client + streaming
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Phase 2: Security + observability
zeroize = { version = "1", features = ["derive"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sha2 = "0.10"
dashmap = "6"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
